--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.4",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.11.11",
     "nodemon": "^2.0.15",
