--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa__cors": "^3.0.3",
     "@types/koa-bodyparser": "^4.3.4",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.11.11",
